--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -688,7 +688,6 @@
                     <TextBlock Visibility="Visible" x:Name="modeTextBlock" Width="240" HorizontalTextAlignment="Right" Margin="0 0 10 0" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignRightWithPanel="True" Padding=" 0 0 10 0" FontSize="25" FontFamily="Segoe UI" FontWeight="ExtraBold" Foreground="Black" Opacity="0.3">Handwriting Mode</TextBlock>
 
                     <StackPanel Spacing="2" Background="White" Name="pageIndexPanel"  Margin="0 0 0 0" RelativePanel.Above="CandidateGrid" Orientation="Horizontal"  RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0 0 0 0">
-
                         <Button Height="30" Width="30" Padding="0 0 0 0" Background="WhiteSmoke"  Click="AddPageButton_Click">
                             <SymbolIcon Symbol="Add" Foreground="{StaticResource Button_Background}" />
                         </Button>
@@ -701,34 +700,37 @@
 
 
                     <!-- pheotypes user are looking for -->
-                    <Grid  Padding="0 0 0 0" Name="CandidateGrid" HorizontalAlignment="Stretch" RelativePanel.AlignRightWithPanel="True" RelativePanel.RightOf="MultimediaPreviewGrid" RelativePanel.AlignBottomWithPanel="True" Height="40">
+                    <Grid  Name="CandidateGrid" HorizontalAlignment="Stretch" RelativePanel.AlignRightWithPanel="True" RelativePanel.RightOf="MultimediaPreviewGrid" 
+                           RelativePanel.AlignBottomWithPanel="True">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="40"></ColumnDefinition>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="40" />
+                            <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40" />
+                        </Grid.RowDefinitions>
 
                         <Grid Name="OpenCandidatePanelButtonGrid" Grid.Column="0">
-
-                            <ToggleButton HorizontalAlignment="Stretch" Padding="5" Background="Transparent" Style="{StaticResource MyToggleButtonStyle}" IsChecked="False" VerticalAlignment="Stretch"  Name="OpenCandidatePanelButton" Click="OpenCandidate_Click" >
+                            <ToggleButton HorizontalAlignment="Center" Background="Transparent" Style="{StaticResource MyToggleButtonStyle}" IsChecked="False" 
+                                          VerticalAlignment="Center"  Name="OpenCandidatePanelButton" Click="OpenCandidate_Click" Height="40">
                                 <Grid>
                                     <FontIcon Visibility="Collapsed" Name="OpenCandidatePanelButtonIcon" Foreground="Gold" FontWeight="ExtraBlack"  FontFamily="Segoe MDL2 Assets" Glyph="&#xE82F;"/>
                                     <Image Source="ms-appx:///Assets/idea.png" Name="OpenCandidateIcon"></Image>
-                                    <Image Source="ms-appx:///Assets/back_black.png" Opacity="0.4" Name="CloseCandidateIcon"  Visibility="Collapsed"></Image>
+                                    <Image Source="ms-appx:///Assets/back_black.png" Opacity="0.4" Name="CloseCandidateIcon" Visibility="Collapsed"></Image>
                                 </Grid>
-
                             </ToggleButton>
-
                         </Grid>
-                        <StackPanel Padding="5 5 0 5" Orientation="Vertical" Grid.Column="1" Name="CandidatePanelStackPanel" Background="White"  Visibility="Collapsed">
-                            <!--
-                            <TextBlock Name="CandidatePanelTextBlock" FontSize="16" Foreground="Gray" VerticalAlignment="Center">Are you looking for:</TextBlock>
--->
-                            <ListView Grid.Column="2" Padding="0 0 0 0" 
-                          ScrollViewer.HorizontalScrollMode="Enabled"
-                          ScrollViewer.VerticalScrollMode="Disabled"
-                          ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-                          ScrollViewer.IsHorizontalRailEnabled="True"
-                          x:Name="candidatePhenoListView" ItemsSource="{x:Bind PhenoMana.phenotypesCandidates, Mode=OneWay}">
+
+                        <StackPanel Orientation="Vertical" Grid.Column="1" 
+                                    Name="CandidatePanelStackPanel" 
+                                    Background="White" Visibility="Collapsed" >
+                            
+                            <ListView Grid.Column="2"
+                              ScrollViewer.HorizontalScrollMode="Enabled"
+                              ScrollViewer.VerticalScrollMode="Disabled"
+                              ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                              ScrollViewer.IsHorizontalRailEnabled="True"          
+                              x:Name="candidatePhenoListView" ItemsSource="{x:Bind PhenoMana.phenotypesCandidates, Mode=OneWay}">
                                 <ListView.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <VirtualizingStackPanel  Orientation="Horizontal"/>
@@ -736,17 +738,28 @@
                                 </ListView.ItemsPanel>
                                 <ListView.ItemTemplate>
                                     <DataTemplate x:DataType="phenotypeservice:Phenotype">
-                                        <customcontrol:PhenotypeBriefControl phenotypeName="{x:Bind name}" phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" sourceType="{x:Bind sourceType}" presentPosition="List"></customcontrol:PhenotypeBriefControl>
+
+                                                
+                                                <customcontrol:PhenotypeBriefControl VerticalAlignment="Center" phenotypeName="{x:Bind name}" 
+                                                                             phenotypeId="{x:Bind hpId}" phenotypeState="{x:Bind state}" 
+                                                                             sourceType="{x:Bind sourceType}" presentPosition="List" />
+
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
+                                <!--Defining the phenotype candidate tile style-->
                                 <ListView.ItemContainerStyle>
                                     <Style TargetType="ListViewItem">
-                                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                                        <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                                        <Setter Property="Margin" Value="5,0,5,0" />
-                                        <Setter Property="Padding" Value="0,0,0,0" />
-                                        <Setter Property="MinHeight" Value="20" />
-                                        <Setter Property="MinWidth" Value="20" />
+                                        <Setter Property="Padding" Value="0 0 0 0" />
+                                        <Setter Property="Margin" Value="0 0 0 0" />
+                                        <Setter Property="Height" Value="40"/>
+                                        <Setter Property="HorizontalContentAlignment" Value="Left" />
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate>
+                                                    <ContentPresenter/>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
                                     </Style>
                                 </ListView.ItemContainerStyle>
                             </ListView>
