--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -194,9 +194,9 @@
             <SplitView.Pane>
                 <Grid Name="QuickViewGrid" BorderThickness="0 0 0 0" Background="Transparent">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="200"/>
+                        <RowDefinition Height="400"/>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="270"/>
+                        <RowDefinition Height="250"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="40"/>
@@ -685,7 +685,7 @@
                         </Storyboard>
                     </RelativePanel.Resources>
 
-                    <TextBlock Visibility="Visible" x:Name="modeTextBlock" Width="240" HorizontalTextAlignment="Right" Margin="0 0 10 0" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignRightWithPanel="True" Padding=" 0 0 10 0" FontSize="25" FontFamily="Segoe UI" FontWeight="ExtraBold" Foreground="Black" Opacity="0.3">Handwriting Mode</TextBlock>
+                    <TextBlock Visibility="Visible" x:Name="modeTextBlock" Width="240" Margin="10 10 10 10" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignLeftWithPanel="True" Padding=" 0 0 10 0" FontSize="25" FontFamily="Segoe UI" FontWeight="ExtraBold" Foreground="Black" Opacity="0.2">Handwriting Mode</TextBlock>
 
                     <StackPanel Spacing="2" Background="White" Name="pageIndexPanel"  Margin="0 0 0 0" RelativePanel.Above="CandidateGrid" Orientation="Horizontal"  RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0 0 0 0">
                         <Button Height="30" Width="30" Padding="0 0 0 0" Background="WhiteSmoke"  Click="AddPageButton_Click">
