--- a/PhenoPad/CustomControl/NotePageControl.xaml
+++ b/PhenoPad/CustomControl/NotePageControl.xaml
@@ -365,21 +365,29 @@
               >
             <!--<TextBlock VerticalAlignment="Top" Grid.Row="0" HorizontalAlignment="Right"                     
                        FontSize="30" Foreground="Black" Margin="20 10 20 10">Add-in Box</TextBlock>-->
-            <GridView Name="addinlist" ScrollViewer.VerticalScrollBarVisibility="Hidden">
-                <GridView.ItemTemplate>
+            <ListView Name="addinlist" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                <ListView.ItemTemplate>
                     <DataTemplate x:DataType="fileservice:ImageAndAnnotation">
                         <Button Click="addInIcon_Click">
                             <customcontrol:AddInControl name="{x:Bind name}" notebookId="{x:Bind notebookId}" 
-                                                        viewOnly="True" pageId="{x:Bind pageId}">
-                                <customcontrol:AddInControl.RenderTransform>
-                                    <ScaleTransform ScaleX="200" ScaleY="200" />
-                                </customcontrol:AddInControl.RenderTransform>
-                            </customcontrol:AddInControl>
-                                <!--<customcontrol:AddInPreview />-->
+                                                        viewOnly="True" pageId="{x:Bind pageId}" />
                         </Button>
                     </DataTemplate>
-                </GridView.ItemTemplate>
-            </GridView>
+                </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Padding" Value="0"/>
+                        <Setter Property="Margin" Value="10"/>
+                        <!--<Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <ContentPresenter/>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>-->
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
         </Grid>
         
         <Button Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Top" 
